assets/css/style.css
body{
    height:  100vh;
    margin:  0px auto;
    padding: 0px auto;
    font-family: 'Montserrat', sans-serif;
    color: rgb(44, 43, 43);
    
}

.wrapper{
    border-style: solid;
    border-color: rgb(44, 43, 43);
    border-width: 10px;
    margin: 10px;
    height: 100%;
    
}

.main{
    margin: 10px;

    
}

.header{
    /* border-style: solid;
    border-color: rgb(44, 43, 43);
    border-width: 2px; */
    margin: 5px;
    padding:5px;
    background-color: rgba(255, 255, 255, 0.527);
    background-blend-mode: lighten;
    background-image: url("../images/pexels-photo-238118.jpeg");
    background-repeat: no-repeat;
    background-size: cover;
    height: 40vh;

}

.text{
    margin-left: 30px;
    margin-top: 50px;
}

p{ 
    color: rgb(66, 65, 65);
    font-weight: lighter;
    font-size: 15px;
    margin-left: 40px;
    margin-bottom: 0px;
}

h1{
    font-weight: bold;
    font-family: 'Open Sans', sans-serif;
}



.container{
    margin: 0 auto;
    padding: 10px;
    height: 200px;
}

#row-main{
    margin: 10px;
    padding:10px;
    /* border-top-style: solid;
    border-top-color: rgba(68, 68, 68, 0.89); */
    border-width: 2px;

}

.col-sm-4{
    border-right-style: solid;
    border-right-color: rgba(68, 68, 68, 0.89);
    border-width: 2px;
    height: 100px;
    text-align: center;

}

button{
 border: none; 
 height: 100px;
 width: 100%;

   
}
.Btn:hover {
    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
    
  }

#contact{
    border-right-style: none;
}

footer{
    
    background-color: rgb(44, 43, 43);
    color: white;
    text-align: center;
    position: absolute;
    right: 0;
    bottom: 0;
    left: 0;
    padding: 1rem;
    margin-right: 15px;
    margin-left: 15px;
    
}



.fa-linkedin{
    color:white;
}

.fa-github-square{
    color:white;
}

.fa-envelope-square{
    color:white;
}




/* ----------------------------------------------------------- */

.about-header{
    background-color:  rgb(44, 43, 43);
    color:white;
    height: 40vh;
}

h2{
    margin-left: 35px;
    padding: 20px;
    font-size: 35px;
    font-weight: lighter;
    padding-top: 80px;
    
        

}

.aboutMe{
    padding-top: 50px;
    height: 58vh;
    background-image: url("../images/city.jpeg");
    background-color: rgba(255, 255, 255, 0.758);
    background-blend-mode: lighten;
    background-repeat: no-repeat;
    background-size: cover;
    text-align: left;
    padding-right: 20px;
   
    

}



/* ---------------------------------------------------------------- */

#cards{
    /* margin: 5px; */
    height: 100px;
    border-style: none;
    margin: 0 auto;
    text-align: center;
    
   
}

a{
    font-size:13px;
    font-weight: lighter;
    color: rgb(46, 46, 46);
    
}
 h4{
     font-size: 15px;
     font-weight: bold;
 }



/* ---------------------------------------------------------------- */

.col-sm{
    margin: 20px;
    padding: 10px;
    text-align: center;
}

#resumeLink{
 font-size: 1rem;
 font-weight: normal;

}

